--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
           name: ${{ matrix.config.artifact }}
 
   release:
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: ${{ github.event.ref == 'refs/heads/main' && startsWith(github.ref_name, 'v') }}
     runs-on: ubuntu-latest
     needs: build
 
