--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         run: /snap/bin/cmake --build --preset=${{ matrix.config.cc }}-${{ matrix.config.build_type }}-warnings
 
   pack:
-    if: ${{ github.event.ref == 'refs/heads/dev' && startsWith(github.ref_name, 'v') }}
+    if: ${{ github.event.ref == 'refs/heads/dev' }}
     name: ${{ matrix.config.name }}
     runs-on: ubuntu-latest
     needs: build
@@ -90,7 +90,7 @@ jobs:
           name: ${{ matrix.config.artifact }}
 
   release:
-    if: ${{ github.event.ref == 'refs/heads/main' && startsWith(github.ref_name, 'v') }}
+    if: ${{ github.event.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: pack
 
