--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,32 +4,13 @@ on: [push]
 
 jobs:
   build:
-    name: ${{ matrix.config.name }}
+    name: "Build ${{ matrix.cc }} ${{ matrix.build_type }} for ubuntu-latest"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        config:
-          - {
-              name: "Ubuntu latest GCC Debug",
-              build_type: debug,
-              cc: gcc,
-            }
-          - {
-              name: "Ubuntu latest GCC Release",
-              build_type: release,
-              cc: gcc,
-            }
-          - {
-            name: "Ubuntu latest Clang Debug",
-            build_type: debug,
-            cc: clang,
-          }
-          - {
-            name: "Ubuntu latest Clang Release",
-            build_type: release,
-            cc: clang,
-          }
+        cc: [ gcc, clang ]
+        build_type: [ debug, release ]
 
     steps:
       - uses: actions/checkout@v4
@@ -40,57 +21,34 @@ jobs:
         run: sudo snap install cmake --classic
 
       - name: Configure
-        run: /snap/bin/cmake --preset=${{ matrix.config.cc }}-${{ matrix.config.build_type }}-warnings
+        run: /snap/bin/cmake --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Build
-        run: /snap/bin/cmake --build --preset=${{ matrix.config.cc }}-${{ matrix.config.build_type }}-warnings
+        run: /snap/bin/cmake --build --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
   pack:
     if: ${{ github.event.ref == 'refs/heads/dev' }}
-    name: ${{ matrix.config.name }}
+    name: "Pack ${{ matrix.cc }} ${{ matrix.build_type }} for ubuntu-latest"
     runs-on: ubuntu-latest
     needs: build
     strategy:
       fail-fast: false
       matrix:
-        config:
-          - {
-            name: "Ubuntu latest GCC Debug",
-            artifact: "ubuntu-latest-gcc-debug.tar.gz",
-            build_type: debug,
-            cc: gcc,
-          }
-          - {
-            name: "Ubuntu latest GCC Release",
-            artifact: "ubuntu-latest-gcc-release.tar.gz",
-            build_type: release,
-            cc: gcc,
-          }
-          - {
-            name: "Ubuntu latest Clang Debug",
-            artifact: "ubuntu-latest-clang-debug.tar.gz",
-            build_type: debug,
-            cc: clang,
-          }
-          - {
-            name: "Ubuntu latest Clang Release",
-            artifact: "ubuntu-latest-clang-release.tar.gz",
-            build_type: release,
-            cc: clang,
-          }
+        cc: [ gcc, clang ]
+        build_type: [ debug, release ]
     
     steps:
       - name: Install latest CPack
         run: sudo snap install cmake --classic
 
       - name: Pack
-        run: /snap/bin/cpack --preset=${{ matrix.config.cc }}-${{ matrix.config.build_type }}-warnings
+        run: /snap/bin/cpack --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          path: ./build/${{ matrix.config.cc }}-${{ matrix.config.build_type }}-warnings/emulator-0.1.1-Linux.tar.gz
-          name: ${{ matrix.config.artifact }}
+          path: ./build/${{ matrix.cc }}-${{ matrix.build_type }}-warnings/emulator-0.1.1-Linux.tar.gz
+          name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
 
   release:
     if: ${{ github.event.ref == 'refs/heads/main' }}
