--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
+      - name: Show Github info
+        run: echo "${{ github.ref }} ${{ github.ref_name }} ${{ github.base_ref }}"
+
       - name: Install latest CMake
         run: sudo snap install cmake --classic
 
@@ -27,11 +30,11 @@ jobs:
         run: /snap/bin/cmake --build --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Pack
-        if: ${{ github.event.ref == 'refs/heads/dev' }}
+        if: ${{ github.event.ref == 'refs/heads/dev' || github.event.ref == 'refs/heads/main' }}
         run: /snap/bin/cpack --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Upload
-        if: ${{ github.event.ref == 'refs/heads/dev' }}
+        if: ${{ github.event.ref == 'refs/heads/dev' || github.event.ref == 'refs/heads/main' }}
         uses: actions/upload-artifact@v4
         with:
           path: ./build/${{ matrix.cc }}-${{ matrix.build_type }}-warnings/emulator-0.1.1-Linux.tar.gz
