--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,18 +30,18 @@ jobs:
         run: /snap/bin/cmake --build --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Pack
-        if: ${{ github.event.ref == 'refs/heads/dev' || github.event.ref == 'refs/heads/main' }}
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         run: /snap/bin/cpack --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Upload
-        if: ${{ github.event.ref == 'refs/heads/dev' || github.event.ref == 'refs/heads/main' }}
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         uses: actions/upload-artifact@v4
         with:
           path: ./build/${{ matrix.cc }}-${{ matrix.build_type }}-warnings/emulator-0.1.1-Linux.tar.gz
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
 
   release:
-    if: ${{ github.event.ref == 'refs/heads/main' }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     needs: build
 
