--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,26 @@ jobs:
       - name: Install latest CMake
         run: sudo snap install cmake --classic
 
+      - name: Install Googletest
+        run: |
+          sudo apt-get -y install googletest
+          cd /usr/src/googletest/
+          sudo mkdir build
+          cd build
+          sudo cmake --install-prefix=/usr/local -DBUILD_SHARED_LIBS=ON -DBUILD_GMOCK=ON -DINSTALL_GTEST=ON -DINSTALL_GMOCK=ON ../
+          sudo make
+          sudo make install
+          cd ..
+          sudo rm -r build
+
       - name: Configure
         run: /snap/bin/cmake --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Build
         run: /snap/bin/cmake --build --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
+
+      - name: Test
+        run: /snap/bin/ctest --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
       - name: Pack
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
