Chore: add the gtest linking path to the environment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,11 @@ jobs:
           cd ..
           sudo rm -r build
 
+      - name: Set environment variables
+        run: |
+          export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
+          echo "LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+
       - name: Configure
         run: /snap/bin/cmake --preset=${{ matrix.cc }}-${{ matrix.build_type }}-warnings
 
