--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,6 +64,11 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        cc: [ gcc, clang ]
+        build_type: [ debug, release ]
 
     steps:
       - name: Create Release
@@ -85,3 +90,13 @@ jobs:
         with:
           path: ./upload_url
           name: upload_url
+
+      - name: Upload Assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_relese.outputa.upload_url }}
+          asset_path: "./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
+          asset_name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
+          asset_content_type: application/x-gtar
