--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,11 +64,11 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        cc: [ gcc, clang ]
-        build_type: [ debug, release ]
+    #    strategy:
+    #      fail-fast: false
+    #      matrix:
+    #        cc: [ gcc, clang ]
+    #        build_type: [ debug, release ]
 
     steps:
       - name: Create Release
@@ -91,12 +91,12 @@ jobs:
           path: ./upload_url
           name: upload_url
 
-      - name: Upload Assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
-          asset_name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
-          asset_content_type: application/x-gtar
+#      - name: Upload Assets
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: "./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
+#          asset_name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
+#          asset_content_type: application/x-gtar
