--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,14 +61,15 @@ jobs:
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
 
   release:
+    name: "Release ${{ matrix.cc }} ${{ matrix.build_type }}"
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     needs: build
-    #    strategy:
-    #      fail-fast: false
-    #      matrix:
-    #        cc: [ gcc, clang ]
-    #        build_type: [ debug, release ]
+    strategy:
+      fail-fast: false
+      matrix:
+        cc: [ gcc ]
+        build_type: [ debug, release ]
 
     steps:
       - name: Create Release
