--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,15 +61,9 @@ jobs:
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
 
   release:
-    name: "Release ${{ matrix.cc }} ${{ matrix.build_type }}"
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        cc: [ gcc ]
-        build_type: [ debug, release ]
 
     steps:
       - name: Create Release
@@ -92,12 +86,41 @@ jobs:
           path: ./upload_url
           name: upload_url
 
-#      - name: Upload Assets
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: "./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
-#          asset_name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
-#          asset_content_type: application/x-gtar
+  publish:
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    name: "Publish precompiled ${{ matrix.cc }} ${{ matrix.build_type }}"
+    runs-on: ubuntu-latest
+    needs: release
+    strategy:
+      fail-fast: false
+      matrix:
+        cc: [ gcc ]
+        build_type: [ debug, release ]
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz
+          path: ./
+
+      - name: Download URL
+        uses: actions/download-artifact@v1
+        with:
+          name: upload_url
+          path: ./
+      - id: set_upload_url
+        run: |
+          upload_url=`cat ./upload_url`
+          echo ::set-output name=upload_url::$upload_url
+
+      - name: Upload to Release
+        id: upload_to_release
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.set_upload_url.outputs.upload_url }}
+          asset_path: ./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz
+          asset_name: ubuntu-latest-${{ matrix.build_type }}.tar.gz
+          asset_content_type: application/x-gtar
