--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,13 +98,13 @@ jobs:
 
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
           path: ./
 
       - name: Download URL
-        uses: actions/download-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: upload_url
           path: ./
