--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           path: ./build/${{ matrix.cc }}-${{ matrix.build_type }}-warnings/emulator-0.1.1-Linux.tar.gz
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
+          if-no-files-found: 'error'
 
   release:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -84,6 +85,7 @@ jobs:
         with:
           path: ./upload_url
           name: upload_url
+          if-no-files-found: 'error'
 
   publish:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -102,12 +104,14 @@ jobs:
         with:
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
           path: ./
+          if-no-files-found: 'error'
 
       - name: Download URL
         uses: actions/upload-artifact@v4
         with:
           name: upload_url
           path: ./
+          if-no-files-found: 'error'
       - id: set_upload_url
         run: |
           upload_url=`cat ./upload_url`
