--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,14 +103,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz"
-          path: ./
+          path: ./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz
           if-no-files-found: 'error'
 
       - name: Download URL
         uses: actions/upload-artifact@v4
         with:
           name: upload_url
-          path: ./
+          path: ./upload_url
           if-no-files-found: 'error'
       - id: set_upload_url
         run: |
