--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.set_upload_url.outputs.upload_url }}
-          asset_path: ./ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz
+          asset_path: ./emulator-0.1.1-Linux.tar.gz
           asset_name: ubuntu-latest-${{ matrix.build_type }}.tar.gz
           asset_content_type: application/x-gzip
