--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,20 +89,19 @@ jobs:
 
   publish:
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-    name: "Publish precompiled ${{ matrix.cc }} ${{ matrix.build_type }}"
+    name: "Publish precompiled gcc ${{ matrix.build_type }}"
     runs-on: ubuntu-latest
     needs: release
     strategy:
       fail-fast: false
       matrix:
-        cc: [ gcc ]
         build_type: [ debug, release ]
 
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: ubuntu-latest-${{ matrix.cc }}-${{ matrix.build_type }}.tar.gz
+          name: ubuntu-latest-gcc-${{ matrix.build_type }}.tar.gz
           path: ./
 
       - name: Download URL
