Feat: binary and decimal subtraction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ add_executable(emulator_test
     tests/Opcode.cpp
     tests/binary_addition.cpp
     tests/decimal_addition.cpp
+    tests/binary_subtraction.cpp
+    tests/decimal_subtraction.cpp
 )
 target_link_libraries(emulator_test PRIVATE emulator_core gtest gtest_main)
 
