Test: join binary addition and subtraction tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,10 @@ find_package(GTest REQUIRED)
 # Create test executable
 add_executable(emulator_test
     tests/Opcode.cpp
-    tests/binary_addition.cpp
     tests/decimal_addition.cpp
-    tests/binary_subtraction.cpp
     tests/decimal_subtraction.cpp
-    tests/bit_manip.cpp
+    tests/bit_manipulations.cpp
+    tests/binary_arithmetic.cpp
 )
 target_link_libraries(emulator_test PRIVATE emulator_core gtest gtest_main)
 
