--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(emulator_test
     tests/bit_manipulations.cpp
     tests/binary_arithmetic.cpp
     tests/decimal_arithmetic.cpp
+    tests/logical_operations.cpp
 )
 target_link_libraries(emulator_test PRIVATE emulator_core gtest gtest_main)
 
