Feat: periodic pulse generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required(VERSION 3.31)
 project(emulator)
 
 # Create library that will be used by both the executable and tests
-add_library(emulator_core
-
-)
+add_library(emulator_core)
 target_compile_options(emulator_core PRIVATE -Werror)
 target_compile_features(emulator_core PUBLIC cxx_std_23)
 target_sources(emulator_core
@@ -18,10 +16,12 @@ target_sources(emulator_core
     include/CPU.hpp
     include/Opcode.hpp
     include/StatusRegister.hpp
+    include/PeriodicPulse.hpp
 
     PRIVATE
     src/ALU.cpp
     src/Opcode.cpp
+    src/PeriodicPulse.cpp
 )
 
 # Create the main executable
