--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(emulator_core
     include/ALU.hpp
     include/Clock.hpp
     include/CPU.hpp
+    include/Memory.hpp
     include/Opcode.hpp
     include/StatusRegister.hpp
 
@@ -22,6 +23,7 @@ target_sources(emulator_core
     src/ALU.cpp
     src/Clock.cpp
     src/CPU.cpp
+    src/Memory.cpp
     src/Opcode.cpp
 )
 
